--- a/logstash/values.yaml
+++ b/logstash/values.yaml
@@ -84,10 +84,10 @@ logstashJavaOpts: "-Xmx1g -Xms1g"
 resources:
   requests:
     cpu: "100m"
-    memory: "1536Mi"
+    memory: "200Mi"
   limits:
-    cpu: "1000m"
-    memory: "1536Mi"
+    cpu: "1"
+    memory: "1Gi"
 
 volumeClaimTemplate:
   accessModes: ["ReadWriteOnce"]
